# fpl-ml-system

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  INITIAL.md  LICENSE  Quick_Start_Guide_TH.md  README.md  VALIDATION_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_user_env.sh  คู่มือการเริ่มต้นใช้งาน.md  คู่มือการใช้งาน.md
monitoring/: prometheus.yml
scripts/: entrypoint.sh  health_check.py  validate_system.py
src/: __init__.py
src/agents/: __init__.py  data_pipeline.py  fpl_manager.py  ml_prediction.py  transfer_advisor.py
src/cli/: __init__.py  main.py
src/cli/commands/: __init__.py  analysis_commands.py  data_commands.py  player_commands.py  prediction_commands.py  team_commands.py  transfer_commands.py
src/config/: __init__.py  database.py  providers.py  settings.py
src/dashboard/: __init__.py  app.py
src/dashboard/components/: __init__.py  charts.py  widgets.py
src/dashboard/pages/: __init__.py  advanced_analytics.py
src/data/: __init__.py  fetchers.py
src/models/: __init__.py  data_models.py  ml_models.py  optimization.py
src/tools/: __init__.py  fpl_api.py  ml_tools.py
src/utils/: cache.py  logging.py  monitoring.py
tests/: __init__.py  conftest.py  pytest.ini  test_agents.py  test_api_integration.py  test_cli.py  test_integration.py  test_ml_models.py  test_optimization.py
tests/integration/: __init__.py  test_agent_communication.py  test_data_flow.py  test_database_integration.py
tests/unit/: __init__.py
tests/unit/test_config/: __init__.py  test_settings.py
tests/unit/test_data/: __init__.py  test_fetchers.py
tests/unit/test_models/: __init__.py  test_data_models.py
tests/unit/test_utils/: test_logging.py
